<resources>
    <string name="app_name">Food Store</string>
    <string name="confirm_cart">Confirm Cart</string>
    <string name="first_onboarding_description">Evaluate the options and choose the foods you want.</string>
    <string name="onboarding_description_2">Prepare your order with care.</string>
    <string name="onboarding_description_3">Let your warm food be delivered to your door quickly.</string>
    <string name="finish">FINISH</string>
    <string name="next">NEXT</string>
    <string name="design">design</string>
    <string name="food_store">Food Store</string>
    <string name="add_cart">Add Cart</string>
    <string name="rising">Rising</string>
    <string name="decreasing">Decreasing</string>
    <string name="filter">Filter by Price</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="empty_files">"Empty files are not allowed!"</string>
    <string name="reset_link">Reset link sent!</string>
    <string name="enter_email">Enter your Email!</string>
    <string name="home">Foods</string>
    <string name="list_not_found">List not Found!</string>
    <string name="cart">Shopping Cart</string>
    <string name="empty_cart">Your Shopping Cart is Empty!</string>
    <string name="preparing_order">Your order is preparing!</string>
    <string name="want_remove">Do you want remove</string>
    <string name="count">Piece</string>
    <string name="total">Total</string>
</resources>