<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".ui.onboarding.screens.SecondFragment">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="91dp"
        android:layout_height="113dp"
        android:scaleType="fitXY"
        android:src="@drawable/onboarding2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/design" />

    <!--
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="64dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/third_animation" />
    -->

    <ImageView
        android:id="@+id/ivOrder"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="128dp"
        android:elevation="5dp"
        android:src="@drawable/order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/design" />

    <TextView
        android:id="@+id/onboardingDesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/onboarding_description_2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOrder" />

    <Button
        android:id="@+id/ContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="189dp"
        android:layout_height="501dp"
        android:scaleType="fitEnd"
        android:src="@drawable/onboarding3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/design" />

</androidx.constraintlayout.widget.ConstraintLayout>